dev_ws/log/build_2020-11-23_17-19-30/tallest_building/stderr.log
  File "H:\MyProgram\C and C++\ROS\dev_ws\install\Lib\site-packages\tallest_building\client_function.py", line 39
    else:
    ^
SyntaxError: invalid syntax

error: [Errno 13] Permission denied: 'H:\\MyProgram\\C and C++\\ROS\\dev_ws\\install\\lib\\tallest_building\\server.exe'
